fix alignment of user info

--- a/frontEnd/src/Components/Header/header.css
+++ b/frontEnd/src/Components/Header/header.css
@@ -29,7 +29,7 @@
   justify-content: center;
   align-items: center;
   white-space: nowrap;
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 .nav-item {
